Reload webpage on logo click

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: home
     <div class="container-fluid images">
       <img src="images/scottish-fold.jpg" />
       <div class="row fixed-top">
-        <div class="col logo-container">
+        <div class="col logo-container" onclick="location.href='/'">
           <span class="logo-icon fa-stack fa-lg"><i class="fa fa-paw fa-stack-2x fa-inverse"></i></span>
           <span class="logo-text">Blue Princess</span>
         </div>
